--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -99,7 +99,10 @@ solver_type = cpu_intensive
 # - uniform
 
 canvas = uniform .125d0 0.d0 0.d0 0.d0 .1d0
-shape = rect 1 1 1 64 128 1
+shape = rect 1 1 1 56 128 1
+shape_trans = linear 0.d0
+shape_fill = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
+shape = triangle 56 1 1 56 128 1 72 1 1 1
 shape_trans = linear 0.d0
 shape_fill = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
 shape = circle 3.d0 4.d0 5.d0 2.34d0
