--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -105,7 +105,7 @@ shape_fill = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
 shape = triangle 56 1 1 56 128 1 72 1 1 1
 shape_trans = linear 0.d0
 shape_fill = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
-shape = circle 3.d0 4.d0 5.d0 2.34d0
+shape = sphere 3.d0 4.d0 5.d0 2.34d0
 shape_trans = cubic 3.d0
 shape_fill = grad_y 1.d0 0.d0 0.d0 0.d0 1.d0 2.d0 3.d0 4.d0 5.d0 6.d0
 
