--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -99,15 +99,22 @@ solver_type = cpu_intensive
 # - uniform
 
 canvas = uniform .125d0 0.d0 0.d0 0.d0 .1d0
+
 shape = rect 1 1 1 56 128 1
-shape_trans = linear 0.d0
-shape_fill = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
+shape_transition_top = ramp 2.5d0
+shape_transition_top_colors = .125d0 0.d0 0.d0 0.d0 .1d0 1.d0 0.d0 0.d0 0.d0 1.d0
+shape_transition_bottom = linear 1.5d0
+shape_transition_bottom_colors = .125d0 0.d0 0.d0 0.d0 .1d0 1.d0 0.d0 0.d0 0.d0 1.d0
+shape_filling = uniform
+shape_filling_colors = 1.d0 0.d0 0.d0 0.d0 1.d0
+
 shape = triangle 56 1 1 56 128 1 72 1 1 1
-shape_trans = linear 0.d0
-shape_fill = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
+shape_filling = uniform
+shape_filling_colors = 1.d0 0.d0 0.d0 0.d0 1.d0
+
 shape = sphere 3.d0 4.d0 5.d0 2.34d0
-shape_trans = cubic 3.d0
-shape_fill = grad_y 1.d0 0.d0 0.d0 0.d0 1.d0 2.d0 3.d0 4.d0 5.d0 6.d0
+shape_filling = uniform
+shape_filling_colors = 1.d0 0.d0 0.d0 0.d0 1.d0
 
 
 # **Chombo Output**
