--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -80,7 +80,7 @@ n_iteration = 100
 # - van_leer, minmod, van_albada, superbee
 
 limiter = van_leer
-limiter_omega = 1.23d0
+limiter_omega = 0.d0
 
 
 # **MUSCL-Hancock solver**
@@ -91,12 +91,16 @@ solver_type = cpu_intensive
 
 
 # **Drawing**
+# NB: All units are in pixels
+#
 # Implemented canvases:
 # - uniform, transparent
 # Implemented shapes:
 # - cuboid, sphere, prism, slab_2d
-# Implemented filling:
+# Implemented fillings:
 # - uniform
+# Implemented perturbations:
+# - Mandelker
 
 canvas = uniform .125d0 0.d0 0.d0 0.d0 .1d0
 
@@ -116,8 +120,12 @@ shape = sphere 3.d0 4.d0 5.d0 2.34d0
 shape_filling = uniform
 shape_filling_colors = 1.d0 0.d0 0.d0 0.d0 1.d0
 
-shape = smoothed_slab_2d x 56 72 2 4
+shape = smoothed_slab_2d x 56 72 .2 .4
 shape_filling_colors = .125d0 0.d0 0.d0 0.d0 .1d0 1.d0 0.d0 0.d0 0.d0 1.d0
+
+perturb = harmonic cartesian x 0.05 32 0.d0 0.d0 0.d0 0.d0 1.d0
+perturb = symmetric_decaying cartesian y 1.d0 56 2 0.d0 0.d0 0.d0 0.d0 1.d0
+perturb = symmetric_decaying cartesian y 1.d0 72 8 0.d0 0.d0 0.d0 0.d0 1.d0
 
 
 # **Chombo Output**
