--- a/src/rhyme_assertion/CMakeLists.txt
+++ b/src/rhyme_assertion/CMakeLists.txt
@@ -15,6 +15,7 @@ set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
 
 
 set ( deps
+  rhyme_log
 )
 
 foreach ( dep ${deps} )
@@ -25,6 +26,8 @@ endforeach ( dep )
 
 
 set ( srcs
+  src/rhyme_assertion_failed.f90
+  src/rhyme_assertion_passed.f90
   src/rhyme_assertion_add_test_message.f90
   src/rhyme_assertion_to_be_array.f90
   src/rhyme_assertion_to_be.f90
