--- a/src/rhyme_muscl_hancock/tests/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/tests/CMakeLists.txt
@@ -7,7 +7,9 @@ set ( factories
   rhyme_chombo
 )
 
-set( test_deps )
+set( test_deps
+  rhyme_assertion
+)
 
 set( proj_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
