--- a/src/rhyme_samr/tests/CMakeLists.txt
+++ b/src/rhyme_samr/tests/CMakeLists.txt
@@ -2,7 +2,10 @@ project( rhyme_samr_tests )
 set( test_subject rhyme_samr )
 
 set( factories )
-set( test_deps )
+
+set( test_deps
+  rhyme_assertion
+)
 
 set( proj_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
