--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,13 @@
+image: ubuntu:bionic
+
 before_script:
-  - apt-get update -qq
-  - apt-get install -y gfortran cmake
-  - apt-get install -y libhdf5-dev
-  - mkdir -p build
+  - apt-get update -qq && apt-get install -y cmake gfortran gcc g++ libhdf5-dev
+  - export CC=`which gcc`
+  - export CXX=`which g++`
+  - export FC=`which gfortran`
 
 cmake:
   script:
+    - mkdir -p build
     - cd build
-    - cmake ..
-    - make
-    - ctest --timeout 10 --output-on-failure
+    - cmake .. && make && ctest --timeout 10 --output-on-failure
