--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
 set( deps
   rhyme_log
   rhyme_nombre
+  rhyme_units
   rhyme_hydro_base
   rhyme_samr
   rhyme_samr_bc
