--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -39,6 +39,15 @@ ic_nlevels = 3
 
 max_nboxes = 1 10 100
 
+# **Units**
+# NB: These units will be used as internal/code units meaning different
+#     components of the code will be converted accordingly, e.g. kB
+#     Be careful, since the wrong choice of these units might lead to non-physical
+#     results
+density_unit = "kg / m^3"
+length_unit = "m"
+time_unit = "s"
+
 
 # **Boundary Conditions**
 # Implemented types:
